try to fix 100vh on mobile

--- a/src/styles/title.scss
+++ b/src/styles/title.scss
@@ -3,6 +3,7 @@
     position: sticky;
 
     max-height: 100vh;
+    max-height: 100dvh;
     top: 0;
 
     display: flex;
